--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,8 @@
 @import "./layout/header-index";
 @import "./layout/main-index";
 @import "./layout/footer-index";
+@import "./layout/main-cursos";
+@import "./layout/footer-cursos";
 @import "./layout/media1024";
 @import "./layout/media768";
 @import "./layout/media425";
