--- a/scss/layout/_media768.scss
+++ b/scss/layout/_media768.scss
@@ -2,6 +2,7 @@
     header {
         height: auto;
         padding-bottom: 3.125rem;
+        padding-right: 0;
         .barra-de-navegacion {
             display: grid;
             grid-template-columns: 1fr;
