Terminé examenes.html y su SASS

--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,9 @@ main .section-grids .tarjeta-medicina a:visited {
   text-decoration: none;
 }
 main .section-grids .tarjeta-medicina:hover {
-  background-color: #3f444e;
+  transform: scale(1.05);
+  border: 1px solid yellow;
+  background-color: #111111;
 }
 main .section-grids .tarjeta-medicina {
   grid-area: medicina;
@@ -325,9 +327,25 @@ main .section-grids .tarjeta-medicina .medicina .descripcion-tarjeta {
   font-weight: 500;
   padding: 1.25rem 0.9375rem;
 }
+main .section-grids .tarjeta-medicina .medicina .lista-de-contenido {
+  color: #b0b0b0;
+  font-family: "Quicksand", sans-serif;
+  font-size: large;
+  font-weight: 700;
+  text-align: left;
+  text-decoration: none;
+  padding-left: 2.5rem;
+  padding-bottom: 1.875rem;
+  list-style: none;
+}
+main .section-grids .tarjeta-medicina .medicina .lista-de-contenido a:visited {
+  color: #b0b0b0;
+  text-decoration: none;
+}
 main .section-grids .tarjeta-administracion:hover {
-  background-color: #3f444e;
-  height: 98%;
+  transform: scale(1.05);
+  border: 1px solid yellow;
+  background-color: #111111;
 }
 main .section-grids .tarjeta-administracion {
   grid-area: administración;
@@ -375,9 +393,25 @@ main .section-grids .tarjeta-administracion .administracion .descripcion-tarjeta
   font-weight: 500;
   padding: 1.25rem 0.9375rem;
 }
+main .section-grids .tarjeta-administracion .administracion .lista-de-contenido {
+  color: #b0b0b0;
+  font-family: "Quicksand", sans-serif;
+  font-size: large;
+  font-weight: 700;
+  text-align: left;
+  text-decoration: none;
+  padding-left: 2.5rem;
+  padding-bottom: 1.875rem;
+  list-style: none;
+}
+main .section-grids .tarjeta-administracion .administracion .lista-de-contenido a:visited {
+  color: #b0b0b0;
+  text-decoration: none;
+}
 main .section-grids .tarjeta-diseño:hover {
-  background-color: #3f444e;
-  height: 98%;
+  transform: scale(1.05);
+  border: 1px solid yellow;
+  background-color: #111111;
 }
 main .section-grids .tarjeta-diseño {
   grid-area: diseño;
@@ -409,7 +443,7 @@ main .section-grids .tarjeta-diseño .diseño .imagen-profesion {
   width: 90%;
   margin: 0 5%;
 }
-main .section-grids .tarjeta-diseño .disponible-tarjeta {
+main .section-grids .tarjeta-diseño .diseño .disponible-tarjeta {
   color: orange;
   font-family: "DM Sans", sans-serif;
   font-size: 1.875rem;
@@ -417,7 +451,7 @@ main .section-grids .tarjeta-diseño .disponible-tarjeta {
   font-weight: 600;
   padding-top: 1.25rem;
 }
-main .section-grids .tarjeta-diseño .descripcion-tarjeta {
+main .section-grids .tarjeta-diseño .diseño .descripcion-tarjeta {
   color: #9d9d9d;
   font-family: "Quicksand", sans-serif;
   font-size: medium;
@@ -425,7 +459,7 @@ main .section-grids .tarjeta-diseño .descripcion-tarjeta {
   font-weight: 500;
   padding: 1.25rem 0.9375rem;
 }
-main .section-grids .tarjeta-diseño .lista-de-contenido {
+main .section-grids .tarjeta-diseño .diseño .lista-de-contenido {
   color: #b0b0b0;
   font-family: "Quicksand", sans-serif;
   font-size: large;
@@ -436,9 +470,383 @@ main .section-grids .tarjeta-diseño .lista-de-contenido {
   padding-bottom: 1.875rem;
   list-style: none;
 }
-main .section-grids .tarjeta-diseño .lista-de-contenido a:visited {
+main .section-grids .tarjeta-diseño .diseño .lista-de-contenido a:visited {
   color: #b0b0b0;
   text-decoration: none;
+}
+main .registro {
+  padding-left: 180px;
+  padding-bottom: 9.375rem;
+}
+main .registro .titulo-registro {
+  font-size: larger;
+  color: orange;
+  font-weight: bolder;
+  font-family: "DM Sans", sans-serif;
+}
+main .registro .instruccion-registro {
+  color: white;
+  font-weight: bold;
+  font-size: large;
+  font-family: "Quicksand", sans-serif;
+}
+main section .otros-cursos {
+  padding-left: 11.25rem;
+  padding-top: 6.25rem;
+  padding-right: 75rem;
+}
+main section .otros-cursos h1 {
+  color: white;
+  font-size: 3.125rem;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  text-align: start;
+}
+main .section-grids-2 {
+  display: grid;
+  grid-template-columns: auto 21% 21% 21% auto;
+  grid-template-rows: auto;
+  grid-template-areas: ". ingenieria arquitectura programacion . ";
+  width: 100%;
+  align-items: center;
+  padding-top: 6.25rem;
+  padding-bottom: 12.5rem;
+  gap: 3.4375rem;
+}
+main .section-grids-2 .tarjeta-ingenieria a:visited {
+  text-decoration: none;
+}
+main .section-grids-2 .tarjeta-ingenieria:hover {
+  transform: scale(1.05);
+  border: 1px solid yellow;
+  background-color: #111111;
+}
+main .section-grids-2 .tarjeta-ingenieria {
+  grid-area: ingenieria;
+  height: 100%;
+  background-color: #1b2031;
+  border-radius: 1.875rem;
+  padding-top: 0.625rem;
+}
+main .section-grids-2 .tarjeta-ingenieria a .titulo-tarjeta-ingenieria {
+  color: #1d60e9;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  text-decoration: underline;
+  font-size: 1.5625rem;
+  text-align: center;
+  padding-bottom: 0.625rem;
+}
+main .section-grids-2 .tarjeta-ingenieria a .parrafo-superior-ingenieria {
+  color: white;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 1.25rem;
+  text-align: center;
+  font-style: normal;
+  padding-bottom: 0.625rem;
+}
+main .section-grids-2 .tarjeta-ingenieria a .imagen-profesion {
+  width: 90%;
+  margin: 0 5%;
+}
+main .section-grids-2 .tarjeta-ingenieria a .disponible-tarjeta {
+  color: orange;
+  font-family: "DM Sans", sans-serif;
+  font-size: 1.875rem;
+  text-align: center;
+  font-weight: 600;
+  padding-top: 1.25rem;
+}
+main .section-grids-2 .tarjeta-ingenieria a .descripcion-tarjeta {
+  color: #9d9d9d;
+  font-family: "Quicksand", sans-serif;
+  font-size: medium;
+  text-align: center;
+  font-weight: 500;
+  padding: 1.25rem 0.9375rem;
+}
+main .section-grids-2 .tarjeta-ingenieria a .lista-de-contenido {
+  color: #b0b0b0;
+  font-family: "Quicksand", sans-serif;
+  font-size: large;
+  font-weight: 700;
+  text-align: left;
+  text-decoration: none;
+  padding-left: 2.5rem;
+  padding-bottom: 1.875rem;
+  list-style: none;
+}
+main .section-grids-2 .tarjeta-ingenieria a .lista-de-contenido a:visited {
+  color: #b0b0b0;
+  text-decoration: none;
+}
+main .section-grids-2 .tarjeta-arquitectura:hover {
+  transform: scale(1.05);
+  border: 1px solid yellow;
+  background-color: #111111;
+}
+main .section-grids-2 .tarjeta-arquitectura {
+  grid-area: arquitectura;
+  height: 100%;
+  background-color: #1b2031;
+  border-radius: 1.875rem;
+  padding-top: 0.625rem;
+}
+main .section-grids-2 .tarjeta-arquitectura a .titulo-tarjeta-arquitectura {
+  color: white;
+  color: green;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  text-decoration: underline;
+  font-size: 1.5625rem;
+  text-align: center;
+  padding-bottom: 0.625rem;
+}
+main .section-grids-2 .tarjeta-arquitectura a .parrafo-superior-arquitectura {
+  color: white;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 1.25rem;
+  text-align: center;
+  font-style: normal;
+  padding-bottom: 0.625rem;
+}
+main .section-grids-2 .tarjeta-arquitectura a .imagen-profesion {
+  width: 90%;
+  margin: 0 5%;
+}
+main .section-grids-2 .tarjeta-arquitectura a .disponible-tarjeta {
+  color: orange;
+  font-family: "DM Sans", sans-serif;
+  font-size: 1.875rem;
+  text-align: center;
+  font-weight: 600;
+  padding-top: 1.25rem;
+}
+main .section-grids-2 .tarjeta-arquitectura a .descripcion-tarjeta {
+  color: #9d9d9d;
+  font-family: "Quicksand", sans-serif;
+  font-size: medium;
+  text-align: center;
+  font-weight: 500;
+  padding: 1.25rem 0.9375rem;
+}
+main .section-grids-2 .tarjeta-arquitectura a .lista-de-contenido {
+  color: #b0b0b0;
+  font-family: "Quicksand", sans-serif;
+  font-size: large;
+  font-weight: 700;
+  text-align: left;
+  text-decoration: none;
+  padding-left: 2.5rem;
+  padding-bottom: 1.875rem;
+  list-style: none;
+}
+main .section-grids-2 .tarjeta-arquitectura a .lista-de-contenido a:visited {
+  color: #b0b0b0;
+  text-decoration: none;
+}
+main .section-grids-2 .tarjeta-programacion:hover {
+  transform: scale(1.05);
+  border: 1px solid yellow;
+  background-color: #111111;
+}
+main .section-grids-2 .tarjeta-programacion {
+  grid-area: programacion;
+  background-color: #1b2031;
+  border-radius: 1.875rem;
+  height: 100%;
+  padding-top: 0.625rem;
+}
+main .section-grids-2 .tarjeta-programacion a .titulo-tarjeta-programacion {
+  color: white;
+  color: orange;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  text-decoration: underline;
+  font-size: 1.5625rem;
+  text-align: center;
+  padding-bottom: 0.625rem;
+}
+main .section-grids-2 .tarjeta-programacion a .parrafo-superior-programacion {
+  color: white;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 1.25rem;
+  text-align: center;
+  font-style: normal;
+  padding-bottom: 0.625rem;
+}
+main .section-grids-2 .tarjeta-programacion a .imagen-profesion {
+  width: 90%;
+  margin: 0 5%;
+}
+main .section-grids-2 .tarjeta-programacion a .disponible-tarjeta {
+  color: orange;
+  font-family: "DM Sans", sans-serif;
+  font-size: 1.875rem;
+  text-align: center;
+  font-weight: 600;
+  padding-top: 1.25rem;
+}
+main .section-grids-2 .tarjeta-programacion a .descripcion-tarjeta {
+  color: #9d9d9d;
+  font-family: "Quicksand", sans-serif;
+  font-size: medium;
+  text-align: center;
+  font-weight: 500;
+  padding: 1.25rem 0.9375rem;
+}
+main .section-grids-2 .tarjeta-programacion a .lista-de-contenido {
+  color: #b0b0b0;
+  font-family: "Quicksand", sans-serif;
+  font-size: large;
+  font-weight: 700;
+  text-align: left;
+  text-decoration: none;
+  padding-left: 2.5rem;
+  padding-bottom: 1.875rem;
+  list-style: none;
+}
+main .section-grids-2 .tarjeta-programacion a .lista-de-contenido a:visited {
+  color: #b0b0b0;
+  text-decoration: none;
+}
+
+main section .titulos-superiores-examenes {
+  padding-left: 11.25rem;
+  padding-top: 6.25rem;
+  padding-bottom: 7.5rem;
+}
+main section .titulos-superiores-examenes h2 {
+  color: orange;
+  font-size: 1.875rem;
+  font-family: "Quicksand", sans-serif;
+  text-align: start;
+}
+main section .titulos-superiores-examenes h1 {
+  color: white;
+  font-size: 3.125rem;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  text-align: start;
+}
+main .titulo {
+  padding-bottom: 6.25rem;
+  padding-left: 11.25rem;
+}
+main .titulo .titulo-examenes {
+  font-size: x-large;
+  color: orange;
+  font-weight: bolder;
+  font-family: "DM Sans", sans-serif;
+}
+main .section-grids-3 {
+  display: grid;
+  grid-template-columns: auto 25% 25% auto;
+  grid-template-rows: auto;
+  grid-template-areas: ". examen1 examen2 . ";
+  width: 100%;
+  justify-content: center;
+  padding-bottom: 6.25rem;
+  gap: 5rem;
+}
+main .section-grids-3 .examen-1:hover {
+  transform: scale(1.05);
+  border: 1px solid yellow;
+  background-color: #111111;
+}
+main .section-grids-3 .examen-1 {
+  grid-area: examen1;
+  height: 100%;
+  background-color: #1b2031;
+  border-radius: 1.875rem;
+  padding-top: 0.625rem;
+}
+main .section-grids-3 .examen-1 a .titulo-examen-1 {
+  color: white;
+  color: #1d60e9;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  text-decoration: underline;
+  font-size: 1.5625rem;
+  text-align: center;
+  padding-bottom: 0.625rem;
+}
+main .section-grids-3 .examen-1 a .imagen-examen {
+  width: 70%;
+  justify-self: center;
+  margin: 0 15%;
+}
+main .section-grids-3 .examen-1 a .disponible-tarjeta-examen {
+  color: orange;
+  font-family: "DM Sans", sans-serif;
+  font-size: 1.875rem;
+  text-align: center;
+  font-weight: 600;
+  padding-top: 1.25rem;
+}
+main .section-grids-3 .examen-1 a .descripcion-tarjeta-examen {
+  color: #9d9d9d;
+  font-family: "Quicksand", sans-serif;
+  font-size: medium;
+  text-align: center;
+  font-weight: 500;
+  padding: 1.25rem 0.9375rem;
+}
+main .section-grids-3 .examen-2:hover {
+  transform: scale(1.05);
+  border: 1px solid yellow;
+  background-color: #111111;
+}
+main .section-grids-3 .examen-2 {
+  grid-area: examen2;
+  height: 100%;
+  background-color: #1b2031;
+  border-radius: 1.875rem;
+  padding-top: 0.625rem;
+}
+main .section-grids-3 .examen-2 a .titulo-examen-2 {
+  color: white;
+  color: green;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 700;
+  text-decoration: underline;
+  font-size: 1.5625rem;
+  text-align: center;
+  padding-bottom: 0.625rem;
+}
+main .section-grids-3 .examen-2 a .imagen-examen {
+  width: 70%;
+  justify-self: center;
+  margin: 0 15%;
+}
+main .section-grids-3 .examen-2 a .disponible-tarjeta-examen {
+  color: orange;
+  font-family: "DM Sans", sans-serif;
+  font-size: 1.875rem;
+  text-align: center;
+  font-weight: 600;
+  padding-top: 1.25rem;
+}
+main .section-grids-3 .examen-2 a .descripcion-tarjeta-examen {
+  color: #9d9d9d;
+  font-family: "Quicksand", sans-serif;
+  font-size: medium;
+  text-align: center;
+  font-weight: 500;
+  padding: 1.25rem 0.9375rem;
+}
+main .titulo {
+  padding-bottom: 6.25rem;
+  padding-left: 11.25rem;
+}
+main .titulo .titulo-examenes {
+  font-size: x-large;
+  color: orange;
+  font-weight: bolder;
+  font-family: "DM Sans", sans-serif;
 }
 
 @media (max-width: 1024px) {
