--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,11 +3,12 @@
 @import "./utilities/keyframes";
 @import "./base/reset";
 @import "./base/tipografias";
-@import "./layout/header-index";
+@import "./layout/header";
 @import "./layout/main-index";
-@import "./layout/footer-index";
+@import "./layout/footer";
 @import "./layout/main-cursos";
-@import "./layout/footer-cursos";
+@import "./layout/main-examenes";
+@import "./layout/main-material";
 @import "./layout/media1024";
 @import "./layout/media768";
 @import "./layout/media425";
